--- a/ro_help/locale/ro/LC_MESSAGES/django.po
+++ b/ro_help/locale/ro/LC_MESSAGES/django.po
@@ -1238,7 +1238,7 @@ msgstr "Caută..."
 
 #: hub/templates/ngo/base.html:27
 msgid "Welcome to RoHelp"
-msgstr "Bine ai venit în RoHelp"
+msgstr "Bine ai venit!"
 
 #: hub/templates/ngo/base.html:30
 msgid ""
@@ -1250,11 +1250,9 @@ msgid ""
 "makes it easy for you to chose the cause you donate to, or the efforts you "
 "contribute to."
 msgstr ""
-"RoHelp este o platformă digitală completă pusă la dispoziția organizațiilor "
-"implicate activ în limitarea efectelor epidemiei de Covid-19 pentru a "
-"colecta resursele de care acestea au mare nevoie. Cu ajutorul acestei "
-"platforme vei putea vedea care sunt cele mai presante nevoi ale "
-"organizațiilor de pe teritoriul țării și vei putea alege către ce cauză vrei "
+"Ajut.md este o platformă digitală dedicată exprimării nevoilor ONG-urilor. "
+"Cu ajutorul acestei platforme vei putea vedea care sunt cele mai presante nevoi "
+"ale organizațiilor de pe teritoriul țării și vei putea alege către ce cauză vrei "
 "să donezi sau la ce eforturi îți dorești să contribui."
 
 #: hub/templates/ngo/base.html:47
