--- a/ro_help/locale/ru/LC_MESSAGES/django.po
+++ b/ro_help/locale/ru/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ajut.md\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-10-27 06:08+0000\n"
+"POT-Creation-Date: 2021-10-27 06:22+0000\n"
 "PO-Revision-Date: 2020-09-12 14:33+0300\n"
 "Last-Translator: \n"
 "Language-Team: grigore.fiodorov@gmail.com\n"
@@ -1071,12 +1071,12 @@ msgid ""
 "contribute to."
 msgstr ""
 "Ajut.md - это полнофункциональная цифровая платформа, которая может быть "
-"использованавсеми организациями, которые активно участвуют в предотвращении "
+"использована всеми организациями, которые активно участвуют в предотвращении "
 "распространения Covid-19. Основная цель палтформы - помочь организациям "
-"собрать ресурсы, которые им нужны. Платформа поможет вам найти больше "
-"всегонасущные потребности, с которыми сталкиваются организации по всей "
-"стране. В результате, этооблегчает вам выбор дела, которому вы жертвуете, "
-"или усилий, которые вы делаетеспособствовать."
+"собрать ресурсы, которые им нужны. Платформа поможет вам найти больше всего "
+"насущные потребности, с которыми сталкиваются организации по всей стране. В "
+"результате, этооблегчает вам выбор дела, которому вы жертвуете, или усилий, "
+"которые вы делаете способствовать."
 
 #: hub/templates/ngo/base.html:47
 msgid "I want to help with money"
@@ -1274,8 +1274,8 @@ msgid ""
 "The password reset link was invalid, possibly because it has already been "
 "used. Please request a new password reset."
 msgstr ""
-"Ссылка для сброса пароля недействительна, возможно, потому, что она уже "
-"была использована. Запросите новый сброс пароля."
+"Ссылка для сброса пароля недействительна, возможно, потому, что она уже была "
+"использована. Запросите новый сброс пароля."
 
 #: hub/templates/rules.html:18
 msgid ""
@@ -1856,8 +1856,8 @@ msgid ""
 "the processing of personal data by Code for Romania, you can contact us at:"
 msgstr ""
 "По любым вопросам или проблемам, а также для обеспечения ваших прав в "
-"отношении обработки персональных данных Code for Moldova, вы можете связаться "
-"с нами по адресу:"
+"отношении обработки персональных данных Code for Moldova, вы можете "
+"связаться с нами по адресу:"
 
 #: hub/templates/terms_and_conditions.html:111
 msgid ""
@@ -1957,7 +1957,7 @@ msgid ""
 msgstr ""
 "\n"
 "                        Платеж за %(ngo)s обрабатывается.Спасибо за вашу "
-"поддержку в это время! Любая помощь увеличивает нашуспособность творить "
+"поддержку в это время! Любая помощь увеличивает нашу способность творить "
 "добро дальше.\n"
 "                    "
 
